# file-transfer-service

./: Cargo.toml
src/: lib.rs  main.rs
src/api/: app.rs  handlers.rs  impls.rs  mod.rs  models.rs
src/capabilities/: mod.rs  s3tosftp.rs
src/config/: local.toml  models.rs
src/errors/: models.rs
src/ops/: impls.rs  models.rs
src/streaming/: impls.rs  models.rs
src/utils/: auth.rs
