[package]
name = "file-transfer-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
config = "0.14.0"
axum = { version = "0.7.5", features = ["default"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
hyper = "1.3.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["full"] }
axum-otel-metrics = "0.8.1"
tracing = "0.1.40"
axum-tracing-opentelemetry = "0.18.1"
init-tracing-opentelemetry = { version = "0.18.1", features = [
    "logfmt",
    "otlp",
    "tracing_subscriber_ext",
] }
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"
futures = "0.3.30"
futures-util = "0.3.30"
bytes = "1.6.0"
aws-sdk-s3 = "1.38.0"
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
tokio-util = "0.7.11"
ssh2 = "0.9.4"
